# rhsupportcli

./: Dockerfile  README.md  openshift.yml  pyproject.toml
.github/: build.sh  build_and_push.sh  linting.sh
.github/workflows/: ci.yml
src/rhsupportcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/rhsupportlib/: __init__.py  cli.py
